internal/xds/translator/testdata/out/xds-ir/http-route-weighted-backend-consistent-hash.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        hashPolicy:
        - header:
            headerName: x-user-id
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: first-route-dest/backend/0
            requestHeadersToAdd:
            - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
              header:
                key: x-backend
                value: primary
            weight: 80
          - name: first-route-dest/backend/1
            requestHeadersToAdd:
            - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
              header:
                key: x-backend
                value: backup
            weight: 20
          useHashPolicy: true
